# code-agents

./: ARCHITECTURE.md  Agents.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  Makefile  README.md  RELEASE-NOTES.md  chat.py  cursor.md  gemini.md  install.sh  pyproject.toml  requirements.txt
agents/: agent_router.yaml  argocd_verify.yaml  auto_pilot.yaml  claude_example.yaml.disabled  code_reasoning.yaml  code_reviewer.yaml  code_tester.yaml  code_writer.yaml  cursor_http_example.yaml.disabled  git_ops.yaml  jenkins_build.yaml  jenkins_cicd.yaml  jenkins_deploy.yaml  pipeline_orchestrator.yaml  qa_regression.yaml  redash_query.yaml  test_coverage.yaml
code_agents/: agents_list.py  app.py  argocd_client.py  atlassian_oauth.py  atlassian_oauth_web.py  backend.py  chat.py  chat_commands.py  chat_history.py  chat_server.py  chat_ui.py  cli.py  cli_completions.py  cli_helpers.py  completions.py  config.py  connection_validator.py  elasticsearch_client.py  env_loader.py  git_client.py  jenkins.py  jenkins_client.py  logging_config.py  main.py  message_types.py  models.py  openai_errors.py  pipeline.py  pipeline_state.py  public_urls.py  redash_client.py  rules_loader.py  setup.py  setup_env.py  setup_ui.py  stream.py  testing_client.py  token_tracker.py
examples/: README-atlassian-mcp.md  atlassian_mcp_client.py  atlassian_oauth_server.py
initiater/: README.md  run_audit.py
scripts/: list_acquiring_sources.py  query_acq_order.py  reset-open-webui-password.sh  reset_open_webui_password.py  run_query.py  start-with-open-webui.sh  (+3 more)
(+33 files in other folders)
